OpenRewrite style gate and CI-activated SpotBugs, trim mvnw flags